Bugfix: search input on iOS (#132)
* updated meta viewport tag: added width=device-width

* hide/reveal non-active slides to fix iOS bug with soft keyboard

* set address input font-size to min of 16px to address iOS soft keyboard bug

* updated slides styles: use position fixed for slides container (simplifies CSS & slides layout)

--- a/app/src/scss/_slides.scss
+++ b/app/src/scss/_slides.scss
@@ -1,21 +1,17 @@
 .slides {
-  position: absolute;
-  top: 60px;
+  position: fixed;
+  top: $nav-main-height;
+  bottom: 0;
   width: 960px;
-  left: 53.776041666667%;
-  margin-left: -516.25px;
-  height: calc(100% - #{$nav-main-height});
+  left: 0;
+  right: 0;
+  margin-left: auto;
+  margin-right: auto;
   overflow: hidden;
   z-index: 10;
   background-color: #fff;
 
   @include responsive(medium-screens) {
-    width: 100%;
-    left: 0;
-    margin: 0;
-  }
-
-  @include responsive(small-screens) {
     width: 100%;
     left: 0;
     margin: 0;
